--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1>Hello world</h1>
+    <h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quod!
+    </h2>
     <script src="app.js"></script>
   </body>
 </html>
