heaterue h2 lorem added

--- a/feature/index.html
+++ b/feature/index.html
@@ -7,10 +7,17 @@
   </head>
   <body>
     <h1>Feature branch</h1>
+
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde voluptate
       doloremque fuga dicta consequatur earum delectus dolor molestiae similique
       eos.
     </p>
+
+    <h2>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae optio
+      fugit fuga similique totam provident repudiandae. Blanditiis consequuntur
+      amet itaque!
+    </h2>
   </body>
 </html>
