feature added to feature branch

--- a/feature/index.html
+++ b/feature/index.html
@@ -7,10 +7,6 @@
   </head>
   <body>
     <h1>Feature branch</h1>
-    <h2>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae optio
-      fugit fuga similique totam provident repudiandae. Blanditiis consequuntur
-      amet itaque!
-    </h2>
+    <h2>hello world</h2>
   </body>
 </html>
