--- a/feature/index.html
+++ b/feature/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>Feature branch</h1>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde voluptate
+      doloremque fuga dicta consequatur earum delectus dolor molestiae similique
+      eos.
+    </p>
   </body>
 </html>
