image added to second-branch

--- a/feature/index.html
+++ b/feature/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Feature branch</h1>
     <h2>hello world</h2>
+    <img src="https://images.app.goo.gl/rtyMCssZEkQdHxve9" alt="" />
   </body>
 </html>
