Ne paraph added

--- a/feature/index.html
+++ b/feature/index.html
@@ -24,6 +24,6 @@
 
     <h2>hello world</h2>
     <img src="https://images.app.goo.gl/rtyMCssZEkQdHxve9" alt="" />
-
+    <p> This is so fucking nice to have here</p>
   </body>
 </html>
