--- a/index1.html
+++ b/index1.html
@@ -19,3 +19,10 @@
   possimus laborum ex eligendi labore dolorem expedita eos rem repellat quaerat
   nobis totam recusandae ratione quas. Sequi, animi dolores.
 </h3>
+
+<main style="color: blue">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nesciunt
+  deserunt omnis quibusdam esse reiciendis suscipit quae autem, ipsam optio
+  deleniti et labore rerum fuga hic ipsa voluptas voluptates aperiam accusantium
+  maxime tempora vel blanditiis eum in. Facilis, laborum libero.
+</main>
