Changed index1.html second time

--- a/feature/index.html
+++ b/feature/index.html
@@ -9,5 +9,11 @@
     <h1>Feature branch</h1>
     <h2>hello world</h2>
     <img src="https://images.app.goo.gl/rtyMCssZEkQdHxve9" alt="" />
+
+    <h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+      laboriosam, voluptatem perspiciatis repellat distinctio vel? Praesentium
+      quae vel quasi magni.
+    </h2>
   </body>
 </html>
