Rebase string added

--- a/feature/index.html
+++ b/feature/index.html
@@ -10,9 +10,6 @@
 
     <p>Hello how are every body</p>
 
-    <p>Just one another merge</p>
-
- 
-  
+    <p>Just one about rebase</p>
   </body>
 </html>
