Rebase two more added

--- a/feature/index.html
+++ b/feature/index.html
@@ -11,6 +11,6 @@
     <p>Hello how are every body</p>
 
     <p>Just one about rebase</p>
-    <p>One more about rebase</p>
+    <p>One more about rebase two</p>
   </body>
 </html>
