--- a/feature/index.html
+++ b/feature/index.html
@@ -11,6 +11,12 @@
     <p>Hello how are every body</p>
 
     <p>Just one about rebase</p>
-    <p>One more about rebase two</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita saepe,
+      incidunt odit ut numquam reprehenderit accusamus, itaque nulla minus
+      officiis neque ipsum est quisquam. Voluptates vitae, provident quia soluta
+      laboriosam voluptate animi, atque accusantium suscipit eos cupiditate,
+      dicta in quam.
+    </p>
   </body>
 </html>
