--- a/feature/index.html
+++ b/feature/index.html
@@ -18,5 +18,6 @@
       laboriosam voluptate animi, atque accusantium suscipit eos cupiditate,
       dicta in quam.
     </p>
+    <h1>Hello world</h1>
   </body>
 </html>
