added the hell of good branch

--- a/feature/index.html
+++ b/feature/index.html
@@ -8,25 +8,6 @@
   <body>
     <h1>Feature branch</h1>
 
-    <p>Hello how are every body</p>
-
-    <p>Just one about rebase</p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita saepe,
-      incidunt odit ut numquam reprehenderit accusamus, itaque nulla minus
-      officiis neque ipsum est quisquam. Voluptates vitae, provident quia soluta
-      laboriosam voluptate animi, atque accusantium suscipit eos cupiditate,
-      dicta in quam.
-    </p>
-    <h1>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, quod? Odio
-      quo ab officia, quaerat mollitia modi error deleniti vel, ullam,
-      laudantium provident a! Et sequi nisi minima adipisci dolores.
-    </h1>
-    <h1>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptatem
-      modi nobis praesentium. Ad illum nisi tempora voluptates quis a officiis
-      eveniet eum perferendis fugit deserunt et neque, excepturi quas!
-    </h1>
+    <h1>One the hell of good branch</h1>
   </body>
 </html>
