one lorem10 paraph

--- a/feature/index.html
+++ b/feature/index.html
@@ -9,7 +9,6 @@
     <h1>Feature branch</h1>
 
     <h1>One the hell of good branch</h1>
-    <p>How to tell this</p>
-    <p>one more p</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, et!</p>
   </body>
 </html>
