changes in p and h2

--- a/feature/index.html
+++ b/feature/index.html
@@ -9,7 +9,7 @@
     <h1>Feature branch</h1>
 
     <h1>One the hell of good branch</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, et!</p>
-    <h2>heeeeeeeeeeeee</h2>
+    <p>Lorem ipsum dolor sit amet HOW THIS IS SO MANY ACCIENT COLORS</p>
+    <h2>heeeeeeeeeeeeellllo</h2>
   </body>
 </html>
