--- a/feature/index.html
+++ b/feature/index.html
@@ -7,9 +7,7 @@
   </head>
   <body>
     <h1>Feature branch</h1>
-
-    <h1>One the hell of good branch</h1>
-    <p>JUST ONE MORE ipsum dolor sit amet HOW THIS IS SO MANY ACCIENT COLORS</p>
-    <h2>HELLOOOOOOOOOOOO</h2>
+    <h2>Added h2</h2>
+    <h3>Added h3</h3>
   </body>
 </html>
