--- a/feature/index.html
+++ b/feature/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>Feature branch</h1>
-    <h2>Added h2</h2>
-    <h3>Added h3</h3>
+
+    <h1>One the hell of good branch</h1>
+    <h2>Another h2 added</h2>
+    <h2>Another h3 added</h2>
   </body>
 </html>
