--- a/feature/index.html
+++ b/feature/index.html
@@ -9,7 +9,6 @@
     <h1>Feature branch</h1>
 
     <h1>One the hell of good branch</h1>
-    <p>Lorem ipsum dolor sit amet HOW THIS IS SO MANY ACCIENT COLORS</p>
-    <h2>heeeeeeeeeeeeellllo</h2>
+    <p>How to tell this</p>
   </body>
 </html>
