This is one more h3 inside feature

--- a/feature/index.html
+++ b/feature/index.html
@@ -11,5 +11,6 @@
     <h1>One the hell of good branch</h1>
     <p>JUST ONE MORE ipsum dolor sit amet HOW THIS IS SO MANY ACCIENT COLORS</p>
     <h2>HELLOOOOOOOOOOOO</h2>
+    <h3>This is one more h3</h3>
   </body>
 </html>
