Much more paragraphs

--- a/feature/index.html
+++ b/feature/index.html
@@ -9,7 +9,7 @@
     <h1>Feature branch</h1>
 
     <h1>One the hell of good branch</h1>
-    <p>JUST ONE MORE ipsum dolor sit amet HOW THIS IS SO MANY ACCIENT COLORS</p>
+    <p>Much more paragraphs</p>
     <h2>HELLOOOOOOOOOOOO</h2>
     <h3>This is one more h3</h3>
   </body>
